--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="np.com.tourguide.activities.RegisterActivity"/>
-        <activity android:name="np.com.tourguide.activities.MainActivity" />
-        <activity android:name="np.com.tourguide.activities.LoginActivity">
+        <activity android:name=".activities.ForgetPasswordActivity"></activity>
+        <activity android:name=".activities.RegisterActivity" />
+        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
