--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.facebook.fresco:fresco:2.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
