--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Sep 21 13:55:36 NPT 2019
+#Mon Nov 04 07:36:26 NPT 2019
 >>>>>>>=Stashed changes
-sdk.dir=C\:\\Users\\Sailesh\\AppData\\Local\\Android\\Sdk
-=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\AVsek Adhikary\\AppData\\Local\\Android\\Sdk
 <<<<<<<=Updated upstream
+=\=\=\=\=\=\=
