--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.TourActivity"></activity>
+        <activity android:name=".activities.EnquireActivity"></activity>
+        <activity android:name=".activities.PackageDetailsActivity" />
+        <activity android:name=".activities.PackageActivity" />
+        <activity android:name=".activities.TourActivity" />
         <activity android:name=".activities.ForgetPasswordActivity" />
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.MainActivity" />
